🔁 refactor(environment): 环境子表聚合为主表 JSONB，连接测试配置直传